feat: shipping options + styles; add fixed_amount type; gate free-shipping by env; add  surcharge; enforce selected country; docs

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
         <div class="card">
           <div class="card-ico">🧪</div>
           <h3>Premium Formula</h3>
-          <p>Thoughtfully dosed with L-Theanine, Citicoline, Rhodiola, and essential B-vitamins.</p>
+          <p>Thoughtfully dosed with the most powerful nutrients.</p>
         </div>
         <div class="card">
           <div class="card-ico">🌿</div>
@@ -129,6 +129,56 @@
           <div class="pc-qty">
             <label for="qty">Quantity</label>
             <input id="qty" type="number" value="1" min="1" max="10" />
+          </div>
+          <div class="pc-country">
+            <label for="shipCountry">Shipping country</label>
+            <select id="shipCountry" required>
+              <option value="">Select country</option>
+              <option value="DE">Germany</option>
+              <option value="AT">Austria</option>
+              <option value="PL">Poland</option>
+              <option value="FR">France (Metropolitan)</option>
+              <option value="NL">Netherlands</option>
+              <option value="BE">Belgium</option>
+              <option value="CH">Switzerland</option>
+              <option value="ES">Spain</option>
+              <option value="IT">Italy</option>
+              <option value="IE">Ireland</option>
+              <option value="GB">Great Britain</option>
+              <option value="SE">Sweden</option>
+              <option value="FI">Finland</option>
+              <option value="DK">Denmark</option>
+              <option value="CZ">Czechia</option>
+              <option value="AD">Andorra</option>
+              <option value="BG">Bulgaria</option>
+              <option value="HR">Croatia</option>
+              <option value="EE">Estonia</option>
+              <option value="GR">Greece</option>
+              <option value="HU">Hungary</option>
+              <option value="LV">Latvia</option>
+              <option value="LI">Liechtenstein</option>
+              <option value="LT">Lithuania</option>
+              <option value="LU">Luxembourg</option>
+              <option value="MT">Malta</option>
+              <option value="MC">Monaco</option>
+              <option value="PT">Portugal</option>
+              <option value="RO">Romania</option>
+              <option value="SK">Slovakia</option>
+              <option value="SI">Slovenia</option>
+              <option value="VA">Vatican City</option>
+              <option value="AL">Albania</option>
+              <option value="CY">Cyprus</option>
+              <option value="IS">Iceland</option>
+              <option value="MD">Moldova</option>
+              <option value="ME">Montenegro</option>
+              <option value="NO">Norway</option>
+              <option value="RS">Serbia</option>
+              <option value="UA">Ukraine</option>
+              <option value="DZ">Algeria</option>
+              <option value="MA">Morocco</option>
+              <option value="TR">Turkey</option>
+              <option value="CA">Canada</option>
+            </select>
           </div>
           <button id="buyBtn" class="btn btn-primary btn-xl">Buy with Stripe</button>
           <div class="pay-logos" aria-hidden="true">
@@ -194,8 +244,7 @@
           </div>
           <div>
             <strong>Contact</strong><br/>
-            hello@jupitermind.com<br/>
-            +1 (555) 123-9876
+            infojupitermind@gmail.com<br/>
           </div>
           <div>
             <strong>Responsible for content</strong><br/>
@@ -209,7 +258,7 @@
   <!-- Sticky mobile buy bar -->
   <div class="buy-bar" role="region" aria-label="Quick purchase">
     <div class="container buy-bar-inner">
-      <div class="buy-price"><span class="currency">$</span><span class="amount">49</span><span class="cents">.99</span></div>
+      <div class="buy-price"><span class="currency">$</span><span class="amount">99</span><span class="cents">.00</span></div>
       <a class="btn btn-primary" href="#pricing">Buy now</a>
     </div>
   </div>
